Project BarangayIMS {
  database_type: "MySQL"
  Note: "Information Management System with IoT-Assisted Document Request Services Kiosk"
}

// ==============================
// MASTER TABLES
// ==============================

Table user_roles {
  role_id bigint [pk, increment]
  role_name varchar(50) [not null, unique]
  description varchar(255)
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp
}

Table services {
  service_id bigint [pk, increment]
  service_name varchar(100) [not null, unique]
  description text
  processing_fee decimal(10,2)
  estimated_processing_time varchar(50)
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp
}

Table request_statuses {
  status_id bigint [pk, increment]
  status_name varchar(50) [not null, unique]
  description varchar(255)
  created_at timestamp
}

// ==============================
// CORE TABLES
// ==============================

Table users {
  user_id bigint [pk, increment]
  role_id bigint [not null, ref: > user_roles.role_id]

  first_name varchar(100)
  middle_name varchar(100)
  last_name varchar(100)

  username varchar(50) [not null, unique]
  password_hash varchar(255) [not null]

  email varchar(100)
  contact_number varchar(20)

  status varchar(20)

  last_login datetime

  created_at timestamp
  updated_at timestamp
}

Table residents {
  resident_id bigint [pk, increment]

  resident_code varchar(20) [not null, unique]

  first_name varchar(100)
  middle_name varchar(100)
  last_name varchar(100)
  suffix varchar(20)

  birth_date date
  gender varchar(20)
  civil_status varchar(30)

  house_no varchar(20)
  street varchar(100)
  purok varchar(50)
  barangay varchar(100)
  city varchar(100)
  province varchar(100)

  contact_number varchar(20)
  email varchar(100)

  photo varchar(255)

  status varchar(20)

  created_at timestamp
  updated_at timestamp
}

Table rfid_cards {
  rfid_card_id bigint [pk, increment]

  resident_id bigint [not null, ref: > residents.resident_id]

  card_uid varchar(100) [not null, unique]

  status varchar(20)

  issued_date date
  expiration_date date

  created_at timestamp
  updated_at timestamp
}

// ==============================
// TRANSACTION TABLES
// ==============================

Table requests {
  request_id bigint [pk, increment]

  resident_id bigint [not null, ref: > residents.resident_id]
  service_id bigint [not null, ref: > services.service_id]
  status_id bigint [not null, ref: > request_statuses.status_id]

  purpose text
  remarks text

  request_date datetime

  approved_date datetime

  release_date datetime
  released_by bigint [ref: > users.user_id]

  created_at timestamp
  updated_at timestamp
}

Table payments {
  payment_id bigint [pk, increment]

  request_id bigint [not null, unique, ref: > requests.request_id]

  received_by bigint [not null, ref: > users.user_id]

  amount decimal(10,2)

  official_receipt_no varchar(50)

  payment_method varchar(20)

  payment_date datetime

  created_at timestamp
}

// ==============================
// AUDIT TABLE
// ==============================

Table audit_logs {
  audit_log_id bigint [pk, increment]

  user_id bigint [not null, ref: > users.user_id]

  action varchar(255)
  module varchar(100)

  ip_address varchar(50)

  created_at timestamp
}